add change deck and play multiple cards